[gui] fix overflow in sysinfo pane #bugfix

--- a/gui/css/sysinfo.less
+++ b/gui/css/sysinfo.less
@@ -1,6 +1,9 @@
 .sysinfo {
 	.block {
-		margin-bottom:10px;
+		margin-bottom:6px;
+	}
+	.block:last-of-type {
+		margin-bottom:0px;
 	}
 
 	.row {
@@ -8,7 +11,7 @@
 	}
 	h2 {
 		text-align:center;
-		margin: 0px 0px 15px 0px;
+		margin: 0px 0px 12px 0px;
 		padding:4px;
 		background-color:@colorMain;
 		color:@colorFontReversed;
